welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: too many arguments for method faireV: ()Unit
	{faireV(c:YELLOW);
               ^MethodsPicture:6: error: too many arguments for method faireV: ()Unit
	faireV(c:RED);
              ^MethodsPicture:7: error: too many arguments for method faireV: ()Unit
	faireV(c:BLUE);
              ^MethodsPicture:8: error: too many arguments for method faireV: ()Unit
	faireV(c:GREEN);	
              ^